changes to idex.html

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/2471186676/snake",
+  "homepage": "http://2471186676.github.io/snake",
   "name": "snake",
   "version": "0.1.0",
   "private": true,
